Code cleanup and UI design

--- a/Countries/Countries.csproj
+++ b/Countries/Countries.csproj
@@ -69,8 +69,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="LoadWindow.xaml.cs">
+      <DependentUpon>LoadWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Continent.cs" />
     <Compile Include="Serviços\ApiService.cs" />
     <Compile Include="Serviços\NetworkService.cs" />
+    <Page Include="LoadWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
