--- a/Countries/Countries.csproj
+++ b/Countries/Countries.csproj
@@ -37,6 +37,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.dll</HintPath>
@@ -119,7 +120,17 @@
       <DependentUpon>LoadWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Modelos\Continent.cs" />
+    <Compile Include="Modelos\Country.cs" />
+    <Compile Include="Modelos\CountryData.cs" />
+    <Compile Include="Modelos\CovidData.cs" />
+    <Compile Include="Modelos\Currency.cs" />
+    <Compile Include="Modelos\GlobalData.cs" />
+    <Compile Include="Modelos\Language.cs" />
+    <Compile Include="Modelos\ProgressReport.cs" />
     <Compile Include="Modelos\Rate.cs" />
+    <Compile Include="Modelos\RegionalBloc.cs" />
+    <Compile Include="Modelos\Response.cs" />
+    <Compile Include="Modelos\Translations.cs" />
     <Compile Include="Serviços\ApiService.cs" />
     <Compile Include="Serviços\DataService.cs" />
     <Compile Include="Serviços\NetworkService.cs" />
@@ -141,12 +152,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Modelos\Currency.cs" />
-    <Compile Include="Modelos\Language.cs" />
-    <Compile Include="Modelos\Country.cs" />
-    <Compile Include="Modelos\RegionalBloc.cs" />
-    <Compile Include="Modelos\Response.cs" />
-    <Compile Include="Modelos\Translations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -176,6 +181,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\notavailable.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Countries_Logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Countries_Icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
